moved logos under EuPathDB: this allows for a smaller min-width-size --the min size's purpose is to prevent logos from wrapping into two lines. With the smaller min size the whole footer can be seen on a 1024x768 screen resolution (without a horizontal scrollbar.)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@42272 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -797,7 +797,7 @@ div#menu ul ul ul li:hover ul {
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 	
 #footer{
-   min-width: 1100px;
+   min-width: 950px;   //1100px;
    font-size: 10px;
    width: 95%;  /* 75%  */
    background-color:#FFFFFF;
